fix horizontal scroll issue caused by hero component

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -18,7 +18,6 @@ main {
   display: flex;
   align-items: center;
   padding: 14rem 10rem;
-  width: 100%;
 
   .hello {
     color: #237186;
